[package]
name = "mindy-html"
version = "0.6.0"
authors = ["Jérôme Garcia <jerome.garcia@bashroom.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = ["web"] }
mindy-engine = { path = "../mindy-engine" }
palette = "0.7.6"
base64 = "0.22.1"
web-sys = "0.3.77"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"


[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
